--- a/hpython.cabal
+++ b/hpython.cabal
@@ -80,6 +80,8 @@ library
                      , Data.Validate.Monadic
                      , Language.Python
                      , Language.Python.DSL
+                     , Language.Python.Import
+                     , Language.Python.Import.Error
                      , Language.Python.Internal.Lexer
                      , Language.Python.Internal.Parse
                      , Language.Python.Internal.Render
@@ -124,21 +126,23 @@ library
   build-depends:       base >=4.9 && <5
                      , bifunctors >= 0.1 && < 5.6
                      , bytestring >= 0.10 && < 0.11
-                     , digit >=0.7 && < 0.8
-                     , dlist >=0.8 && <0.9
-                     , lens >= 4 && < 4.18
-                     , parsers >= 0.10 && < 0.13
-                     , megaparsec >=6.3 && <7
-                     , fingertree >=0.1 && <0.2
-                     , generic-lens >=1.0 && <1.2
-                     , mtl >= 2.1 && < 2.3
                      , containers >=0.5.7.1 && <0.7
                      , deriving-compat >=0.4 && <0.6
+                     , digit >=0.7 && < 0.8
+                     , directory >= 1.3 && <1.4
+                     , dlist >=0.8 && <0.9
+                     , filepath >= 1.4 && <1.5
+                     , generic-lens >=1.0 && <1.2
+                     , fingertree >=0.1 && <0.2
+                     , lens >= 4 && < 4.18
+                     , megaparsec >=6.3 && <7
+                     , mtl >= 2.1 && < 2.3
+                     , parsers >= 0.10 && < 0.13
+                     , parsers-megaparsec >=0.1 && <0.2
                      , semigroupoids >=5.2.2 && <5.4
                      , text >=1.2 && <1.3
                      , these >=0.7.4 && <0.8
                      , validation >= 1 && < 1.1
-                     , parsers-megaparsec >=0.1 && <0.2
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
