--- a/hpython.cabal
+++ b/hpython.cabal
@@ -195,6 +195,7 @@ test-suite hpython-tests
   type:                exitcode-stdio-1.0
   other-modules:       DSL
                      , Helpers
+                     , Imports
                      , LexerParser
                      , Optics
                      , Parser
@@ -203,7 +204,8 @@ test-suite hpython-tests
                      , Syntax
   hs-source-dirs:      test
   build-depends:       base >=4.9 && <5
-                     , filepath
+                     , directory >=1.3 && <1.4
+                     , filepath >=1.4 && <1.5
                      , hpython
                      , hedgehog >= 0.5 && < 0.7
                      , lens >= 4 && < 4.18
