--- a/hpython.cabal
+++ b/hpython.cabal
@@ -142,6 +142,7 @@ library
                      , semigroupoids >=5.2.2 && <5.4
                      , text >=1.2 && <1.3
                      , these >=0.7.4 && <0.8
+                     , transformers >= 0.5 && <0.6
                      , validation >= 1 && < 1.1
   hs-source-dirs:      src
   default-language:    Haskell2010
