--- a/hpython.cabal
+++ b/hpython.cabal
@@ -208,6 +208,7 @@ test-suite hpython-tests
                      , Syntax
   hs-source-dirs:      test
   build-depends:       base >=4.9 && <5
+                     , containers >=0.5.7.1 && <0.7
                      , directory >=1.3 && <1.4
                      , filepath >=1.4 && <1.5
                      , hpython
